fix z-index

--- a/src/scss/foundation/_personal-reg.scss
+++ b/src/scss/foundation/_personal-reg.scss
@@ -71,7 +71,7 @@
 
 
 .wrap-login.active{
-    opacity: 1px;
+    opacity: 1;
     pointer-events:all;
     transform: translateX(0%);
     height: auto;
