--- a/src/scss/layouts/_catalog.scss
+++ b/src/scss/layouts/_catalog.scss
@@ -457,6 +457,12 @@
     color: #222321;
 }
 
+
+.cabinet-page{
+    padding: 80px 0px;
+}
+
+
 @media screen and (max-width: 1440px){ 
 
     .catalog-wrap{
