--- a/src/scss/layouts/_l-header.scss
+++ b/src/scss/layouts/_l-header.scss
@@ -13,7 +13,6 @@
 }
 
 
-
 .menu-line{
     height: 90px;
     display: grid;
@@ -51,7 +50,7 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 11;
+    z-index: 999999;
     top: 0;
     opacity: 0;
     left: -100%;
@@ -124,73 +123,6 @@
 
     }
   }
-
-
-
-//   .search {
-//     position: relative;
-//     height: 50px;
-// }
-
-// .search .input {
-//     background-color: #fff;
-//     border: 0;
-//     font-size: 18px;
-//     padding: 15px;
-//     height: 50px;
-//     width: 50px;
-//     transition: width 0.3s ease;
-//     position: absolute;
-//     right: -11px;
-//     width: 30px;
-//     background-color: transparent;
-// }
-
-// .btn {
-//     background-color: transparent;
-//     border: 0;
-//     cursor: pointer;
-//     font-size: 24px;
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     height: 50px;
-//     width: 37px;
-//     transition: transform 0.3s ease;
-// }
-
-// .btn:focus,
-// .input:focus {
-//     outline: none;
-// }
-
-// .search.active .input {
-//     border-radius: 2px;
-//     width: 272px;
-//     margin-right: 21px;
-//     background-color: rgba(255, 255, 255, 0.4);
-//     padding-left:50px;
-// }
-
-
-// .search{
-//   .btn{
-//     margin-right: 27px;
-//     transition: all ease-in-out 0.3s;
-//   }
-//   .search-img{
-//     height: 25px;
-//     width: 24px;
-//     background:  url('../img/icons/search.svg') ;
-//     background-repeat: no-repeat;
-//     background-position: center center;
-//     background-size: cover;
-//   }
-//   &.active .btn{
-//     position: absolute;
-//     right:200px;
-//   }
-// }
 
 .search-form{
   position: relative;
