--- a/src/scss/layouts/_l-one-item.scss
+++ b/src/scss/layouts/_l-one-item.scss
@@ -384,7 +384,7 @@
   width: 384px;
   height: 100%;
   padding: 40px 47px 50px 42px;
-  z-index: 99;
+  z-index: 99999;
   overflow-x: hidden;
   padding-top: 60px;
   position: fixed;
